--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,3 +34,14 @@ a {
   margin: auto;
   padding: auto;
 }
+
+table,
+td {
+  border: 1px solid #333;
+}
+
+thead,
+tfoot {
+  background-color: #333;
+  color: #fff;
+}
