--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,29 +17,19 @@ a {
 
 .container {
   display: flex;
+  flex-direction: row;
   padding-bottom: 2rem;
   justify-content: center;
 }
 
 .Element {
   padding: 2rem;
-
 }
 
 .containerHomePage {
   text-align: center;
   margin: auto;
-  padding: auto;
-}
-
-.containerCategory {
-  display: flex;
-}
-.elementCategory {
-  border: solid;
-  margin: auto;
-  padding: 3rem;
-  text-align: center;
+  padding: 0 15vw;
 }
 
 table,
@@ -67,18 +57,6 @@ tfoot {
   justify-content: center;
 }
 
-.ContainerTutoButton {
-  padding-top: 4rem;
-}
-.containerList {
-  display: flex;
-  justify-content: center;
-}
-.containerListElement {
-  border: solid;
-  margin: auto;
-}
-
 .containerListImage {
   margin: auto;
   text-align: center;
@@ -97,7 +75,63 @@ tfoot {
   display: block;
   width: 30%;
   height: 2px;
-  background-color:#0c6838;
+  background-color: #0c6838;
   margin: auto;
 }
 
+/* CSS page Category Tuto & Category Class */
+.underline {
+  display: block;
+  width: 50%;
+  height: 2px;
+  background-color: #0c6838;
+  margin: 1rem auto;
+}
+
+.containerElementCategory {
+  padding: 4rem 15vw;
+}
+
+.containerCategory {
+  display: flex;
+  flex-wrap: wrap;
+}
+.containerCategory > div {
+  width: 40%;
+  margin-top: 4rem;
+}
+
+.elementCategory:hover {
+  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.53);
+  cursor: pointer;
+}
+
+.elementCategory {
+  border: solid;
+  margin: auto;
+  padding: 3rem;
+  text-align: center;
+}
+
+@media (max-width: 850px) {
+  .containerCategory > div {
+    width: 70%;
+  }
+}
+
+/* CSS index Home PAge */
+
+.boutonIndex {
+  border: 2px solid #0c6838;
+  background-color: white;
+  padding: 1rem 3rem;
+  margin-bottom: 2rem;
+  border-radius: 10px;
+  color: #0c6838;
+}
+
+.boutonIndex:hover {
+  color: white;
+  background-color: #0c6838;
+  cursor: pointer;
+}
