--- a/styles/globals.css
+++ b/styles/globals.css
@@ -526,3 +526,13 @@ tfoot {
     padding: 1rem;
   }
 }
+
+/* CSS Panier code promo  */
+
+.inputCodePromo {
+  display: block;
+  margin: 1rem auto;
+  padding: 0.5rem 1rem;
+  width: 15rem;
+  text-align: center;
+}
