--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,6 +58,11 @@ tfoot {
   text-align: center;
 }
 
+.container .Element p {
+  margin-bottom: 0.25rem;
+  margin-top: 0.25rem;
+}
+
 .underline {
   display: block;
   width: 30%;
@@ -83,14 +88,10 @@ tfoot {
   display: flex;
   flex-wrap: wrap;
 }
+
 .containerCategory > div {
   width: 40%;
   margin-top: 4rem;
-}
-
-.elementCategory:hover {
-  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.53);
-  cursor: pointer;
 }
 
 .elementCategory {
@@ -98,6 +99,14 @@ tfoot {
   margin: auto;
   padding: 3rem;
   text-align: center;
+  transition: all 0.4s ease-out;
+}
+
+.elementCategory:hover {
+  box-shadow: 0 0.7rem 1.2rem rgba(0, 0, 0, 0.95);
+  border: #0c6838 solid;
+  cursor: pointer;
+  transition: all 0.6s ease-in;
 }
 
 @media (max-width: 850px) {
@@ -111,10 +120,11 @@ tfoot {
 .boutonIndex {
   border: 2px solid #0c6838;
   background-color: white;
-  padding: 1rem 3rem;
-  margin-bottom: 2rem;
+  padding: 1rem 2rem;
+  margin: 0 1rem 3rem 1rem;
   border-radius: 10px;
   color: #0c6838;
+  font-size: 1rem;
 }
 
 .boutonIndex:hover {
@@ -183,13 +193,18 @@ tfoot {
 .containerListImage {
   text-align: center;
 }
+
 .containerListElement {
   padding: 2rem;
   max-width: 25rem;
 }
 
-.containerListElement:hover {
-  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.53);
+.containerListElement img {
+  transition: box-shadow 0.6s ease-out;
+}
+.containerListElement img:hover {
+  box-shadow: 0 0.7rem 1.2rem rgba(0, 0, 0, 0.95);
+  transition: box-shadow 0.5s ease-in;
   cursor: pointer;
 }
 
@@ -294,6 +309,23 @@ tfoot {
   transition: all 0.3s ease-in;
 }
 
+.buttonCartEmpty {
+  text-align: center;
+  width: fit-content;
+  margin: 2rem auto 5rem auto;
+  padding: 1rem;
+  border: #0c6838 solid 2px;
+  border-radius: 5px;
+  transition: background-color 0.4s ease-out;
+}
+
+.buttonCartEmpty:hover {
+  background-color: #0c6838;
+  color: white;
+  transition: all 0.4s ease-out;
+  cursor: pointer;
+}
+
 .emptyCartP {
   text-align: center;
   margin-top: 3rem;
@@ -385,6 +417,7 @@ tfoot {
   padding-top: 4rem;
   justify-content: center;
 }
+
 .ContainerTutoButton {
   display: flex;
   justify-content: space-around;
@@ -411,40 +444,66 @@ tfoot {
   cursor: pointer;
 }
 
+@media (max-width: 850px) {
+  .ContainerTutoVideo {
+    padding: 5rem;
+  }
+
+  .boutonTuto {
+    flex-direction: column;
+    margin-bottom: 1rem;
+  }
+
+  .ContainerTutoDescription {
+    padding: 0 5rem;
+    text-align: justify;
+  }
+}
+
 /* CSS PAGE COURS SLOT */
+
+.pageCours {
+  width: 70vw;
+  padding: 5rem 0;
+  margin: auto;
+}
 
 .ContainerCours {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .ContainerCoursImageDescription {
   display: flex;
   flex-direction: column;
   max-width: 40rem;
+  padding: 0 2rem;
 }
+
 .image {
   display: flex;
   justify-content: center;
 }
+
 .ContainerCoursDescription {
   max-width: 60rem;
-  padding-top: 2rem;
-  /* padding: 2rem; */
-  text-align: center;
+  padding: 2rem;
+  text-align: justify;
   justify-content: center;
 }
+
 .ContainerCoursSlot {
   border: 2px solid #0c6838;
   border-radius: 10px;
   max-width: 40rem;
   display: flex;
   text-align: center;
-  flex-direction: row;
   align-items: center;
+  justify-content: center;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.85);
   transition: box-shadow 0.6s ease-out;
+  padding: 1rem;
 }
 
 .ContainerCoursSlot:hover {
@@ -457,12 +516,24 @@ tfoot {
   padding: 1rem;
   margin: 2rem;
   border-radius: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.slot > div {
+  display: flex;
+  flex-direction: column;
+  margin-left: 0.5rem;
+  text-align: left;
+}
+
+.slot label,
+.slot input {
+  cursor: pointer;
 }
 
 .boutonSlot {
-  display: flex;
   margin: auto;
-  justify-content: center;
   text-align: center;
   border: 2px solid black;
   background-color: white;
@@ -470,6 +541,13 @@ tfoot {
   margin-bottom: 2rem;
   border-radius: 10px;
   color: black;
+}
+
+.boutonSlot:hover {
+  cursor: pointer;
+  background-color: #0c6838;
+  color: white;
+  border: 2px solid #0c6838;
 }
 
 .ContainerTutoButton {
