--- a/styles/globals.css
+++ b/styles/globals.css
@@ -356,10 +356,14 @@ tfoot {
 
 .cartContainer .imgCart {
   width: 30%;
+  padding-right: 2rem;
 }
 
 .cartContainer .imgCart > img {
-  width: 100%;
+  margin: 2rem;
+  padding: 2rem;
+  width: 15rem;
+  height: 15rem;
 }
 
 .price {
@@ -746,7 +750,7 @@ tfoot {
 .devenirProf {
   margin-top: 3rem;
   margin-bottom: 3rem;
-
+  padding: 2rem;
   border: 2px solid #044222;
   border-radius: 10px;
   text-align: center;
