--- a/styles/globals.css
+++ b/styles/globals.css
@@ -783,7 +783,7 @@ tfoot {
   border: 2px solid #044222;
   border-radius: 10px;
   text-align: center;
-
+  overflow: scroll;
   padding: 2rem;
   width: 40rem;
   max-height: 50rem;
